# lai

./: .gitignore  AGENTS.md  Cargo.toml  KNOWN_ISSUES.md  NOTICE  README.md  build.rs
athena/: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ATHENA-COLLISION-TICKET.md  ATHENA-CWD-DATA-TICKET.md  ATHENA_OPTIMIZATION_LOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RESTRUCTURE_PLAN.md  VEDIC_ALIGNMENT.md  athena-bin-release  athena-bug-tickets-2026-07-06.md  athena-launcher.sh  athena-static  athena_client.py  build.rs  deny.toml  docker-compose.yml  entity-mod.patch  formula-mod.patch  formula-registry.patch  rust-toolchain.toml
athena/.cargo/: config.toml
athena/.claude/: settings.json
athena/benches/: formula_search.rs  shikai_processing.rs  wheel_traversal.rs
athena/capstone/: athena-qwen.toml
athena/docs/: distribution.md
athena/entities/: astrology_houses.toml  mangala.toml  navagraha.toml  surya.toml
athena/formulas/atomic/: brihaspati_history.toml  brihaspati_psychology.toml  budha_astronomy.toml  budha_economics.toml  chandra_earth.toml  jyotisha_vedic.toml  mangala_cs.toml  mangala_math.toml  shani_language.toml  shani_philosophy.toml  shukra_engineering.toml  shukra_physics.toml  surya_bio.toml
athena/formulas/bridging/: clinical_psych.toml  cs_math.toml  environment_bio.toml  language_psych.toml  physics_engine.toml
athena/formulas/nonmath/: capstone.toml  code_patterns.toml  grammar.toml  logic_patterns.toml
athena/scripts/: athena-mcp.sh  backfill_tags.py  llama-server.sh  sync-to-sdcard.sh
athena/src/: lib.rs  main.rs
athena/src/asauchi/: mod.rs
athena/src/astrology/: aspects.rs  classifier.rs  constants.rs  elements.rs  houses.rs  mod.rs  modalities.rs  rulers.rs  signs.rs  vedic.rs
athena/src/bankai/: chain.rs  compose.rs  confidence.rs  distill.rs  eval.rs  llm_eval.rs  llm_router.rs  mod.rs  traverse.rs
athena/src/budget/: mod.rs
athena/src/descent/: mod.rs
athena/src/entity/: mod.rs
athena/src/ephemeris/: mod.rs
athena/src/formula/: mod.rs  registry.rs
athena/src/gates/: confidence.rs  fact.rs  formal.rs  logic.rs  math.rs  mod.rs
athena/src/gyro/: dynamics.rs  mapping.rs  mod.rs  router.rs  state.rs
athena/src/inference/: config.rs  download.rs  local.rs  manifest.rs  mod.rs  remote.rs
athena/src/influence/: mod.rs
athena/src/ledger/: mod.rs
athena/src/mcp/: compact.rs  mod.rs  server.rs  tools.rs
athena/src/primitive/: eval.rs  mod.rs  nand.rs
athena/src/shikai/: grammar.rs  intent.rs  mod.rs
athena/src/tanto/: math.rs  mod.rs  parser.rs  rational.rs
athena/src/wheel/: axis.rs  edges.rs  graph.rs  mod.rs  nodes.rs
athena/src/zanpakuto/: mod.rs  nlp.rs
athena/tests/: bankai_integration.rs  formula_registry_integration.rs  formula_regression.rs  mcp_integration.rs  wheel_integration.rs
gate/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
gate/cid-wasm/: Cargo.toml  build.sh  cid-wasm.js  index.html  loader.js
gate/cid-wasm/src/: lib.rs
gate/docs/: AGENT_UPDATE_SUMMARY.md  DOMAINS.md  DOMAIN_IMPLEMENTATION.md  PLAN-v0.5.0.md
gate/src/: lib.rs  main.rs
gate/src/core/: ball.rs  pin.rs  pocket.rs
gate/src/economy/: budget.rs  conversation.rs  cost.rs  tray.rs
gate/src/gates/: confidence.rs  fact.rs  fallacy.rs  formal.rs  logic.rs  math.rs  mod.rs
gate/src/inference/: bias.rs  cache.rs  compressor.rs  fixer.rs  json.rs  mod.rs  pipeline.rs  proxy.rs  request.rs  result.rs  sanity.rs  scorer.rs  stream.rs
gate/src/kb/: facts.rs  lookup.rs  mod.rs
gate/src/mcp/: http.rs  mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
gate/src/output/: format.rs  mod.rs  trace.rs
gate/src/state/: machine.rs
gate/src/tanto/: convert.rs  determinism.rs  formulas.rs  math.rs  mod.rs  parser.rs  pipeline.rs  rational.rs  sanity.rs  solver.rs  thinking.rs  verify.rs
gate/tests/: integration.rs
laverna-wasm/: Cargo.toml  build.sh  index.html  loader.js
laverna-wasm/src/: lib.rs
proof/: .gitignore  AGENTS.md  Cargo.toml  NOTICE  README.md  build.rs  deny.toml  rust-toolchain.toml  smithery.yaml
proof/.cargo/: config.toml
proof/docs/: ELEVATING_LAVERNA.md  brand.md  companion-design.md  copyright-registration-prep.md  ip-status.md  lai-verdict-contract.md  manifesto.md  mcp-registry.md  nlnet-application.md  verify-api.md  wasm.md
proof/docs/provenance/: HEAD-431bbea  HEAD-431bbea.ots
proof/domains/: cp77_level1.toml  pillars.toml
proof/entities/: astrology_aspects.toml  brihaspati.toml  budha.toml  chakras.toml  chandra.toml  counsel_advice.toml  enlightened.toml  entities.toml  genetics.toml  ketu.toml  navagraha.toml  pharmacology.toml  rahu.toml  shani.toml  shukra.toml  world_entities.toml
proof/formulas/: atomic_dynamic.toml  atomic_seed.toml  bridging_seed.toml  nonmath_seed.toml  search_synonyms.toml  vortex_seed.toml
proof/laverna-wasm/: Cargo.toml  build.sh
proof/laverna-wasm/src/: lib.rs
proof/scripts/: deposit.sh  export.sh  get-model.sh  laverna-companion.py  tickets.sh
proof/src/: digest.rs  inference.rs  lib.rs  main.rs  profile.rs  strategy.rs  time.rs
proof/src/aspect/: mod.rs
proof/src/astrology/: barnum.rs  classifier.rs  constants.rs  elements.rs  houses.rs  mod.rs  modalities.rs  rulers.rs  signs.rs  vedic.rs
proof/src/chart/: mod.rs  personality.rs
proof/src/companion/: memory.rs  mod.rs
proof/src/compute/: math.rs  mod.rs  natural.rs  rational.rs  solver.rs
proof/src/descent/: mod.rs
proof/src/domain_graph/: axis.rs  edges.rs  graph.rs  nodes.rs
proof/src/economy/: tray.rs
proof/src/entity/: mod.rs
proof/src/ephemeris/: mod.rs
proof/src/formula/: glyph.rs  mod.rs  nonmath.rs  registry.rs
proof/src/graph/: mod.rs
proof/src/hungarian/: mod.rs
proof/src/nlp/: mod.rs
proof/src/optimize/: milp.rs  mod.rs
proof/tests/: energy_efficiency_integration.rs  mcp_parity.rs  optimizer_determinism.rs  proof_redteam.rs  route_purity.rs  self_classification.rs  strategize_determinism.rs  swiss_oracle.rs  validate_exit.rs
(+104 files in other folders)
