[workspace]
resolver = "2"
members = [
    "proof",
    "gate",
    "athena",
    "proof/laverna-wasm",
    "gate/cid-wasm",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["nutypebuddha <nutypebuddha@proton.me>"]
repository = "https://github.com/nutypebuddha/lai"
homepage = "https://github.com/nutypebuddha/lai"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
