[package]
name = "athena"
version = "0.1.0"
edition = "2021"
description = "Relational intelligence engine — formulas, not facts. Cross-domain reasoning via a symbolic zodiac wheel graph with 4-layer security architecture."
authors = ["nutypebuddha <nutypebuddha@proton.me>"]
license = "Apache-2.0"
repository = "https://github.com/nutypebuddha/lai"
publish = false
keywords = ["reasoning", "graph", "formula", "validation", "cross-domain", "security"]
categories = ["science", "mathematics", "compilers"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
thiserror = "2"

# Compute
# meval = "0.2"  -- replaced by Tanto (internal module)

# TOML parsing for formula files
toml = "0.8"

# MCP Server (optional) — pinned to 2.x for Host header validation fix
rmcp = { version = "1.4", features = ["server", "transport-io"], optional = true }
tokio = { version = "1", features = ["io-util", "rt", "rt-multi-thread", "macros"], optional = true }
vsop87 = "3.0.0"
astro = "2.0.0"

# LLM Integration (optional) — Qwen2.5-0.5B via llama-gguf for local copilot routing
llama-gguf = { version = "0.10", features = ["cpu"], optional = true }
ureq = { version = "2", features = ["json"], optional = true }
dirs = { version = "5", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt", "macros"] }

[[bench]]
name = "formula_search"
harness = false

[[bench]]
name = "wheel_traversal"
harness = false

[[bench]]
name = "shikai_processing"
harness = false

[features]
default = ["mcp"]
mcp = ["dep:rmcp", "dep:tokio"]
budget = []
llm = ["dep:llama-gguf", "dep:ureq", "dep:tokio", "dep:dirs", "dep:sha2"]
