[package]
name = "lai-gate-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for L.ai · Gate (lai-gate)"
license = "Apache-2.0"
repository = "https://github.com/nutypebuddha/lai"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
lai-gate = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
]

[dependencies.js-sys]
version = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
