[package]
name = "laverna-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for L.ai · Proof (Laverna) — deterministic solve/verify"
license = "Apache-2.0"
publish = false
repository = "https://github.com/nutypebuddha/lai"
homepage = "https://github.com/nutypebuddha/lai"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
laverna = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
]

[dependencies.js-sys]
version = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
